src/objects/Data_Import_Mapping__mdt.object
<CustomObject>
    <description>How fields on the ImportObject should be mapped to Account,Contact,Lead,Contribution, Campaign or CampaignMember fields</description>
    <fields>
        <fullName>AddToExistingValue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On update, add the value in the ImportObject to the value in the existing record.  Otherwise, overwrite.</description>
        <inlineHelpText>On update, add the value in the ImportObject to the value in the existing record.  Otherwise, overwrite.</inlineHelpText>
        <label>AddToExistingValue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IO_FieldName__c</fullName>
        <description>The fieldname in the ImportObject.</description>
        <inlineHelpText>The fieldname in the ImportObject.</inlineHelpText>
        <label>IO_FieldName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target_Field</label>
        <metadataRelationshipControllingField>Data_Import_Mapping__mdt.Target_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Data_Import_Mappings</relationshipLabel>
        <relationshipName>Data_Import_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target_Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Data_Import_Mappings1</relationshipLabel>
        <relationshipName>Data_Import_Mappings1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Data Import Mapping</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>IO_FieldName__c</columns>
        <columns>Target_Object__c</columns>
        <columns>Target_Field__c</columns>
        <columns>AddToExistingValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <pluralLabel>Data Import Mappings</pluralLabel>
</CustomObject>